--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@ title="más trabajos!">Behance</a>
 
     <main>
 
-<div><a href="/Feldman_TP_Final/css/fotos/foto1.jpg" data-lightbox="galeria"><img src="/Feldman_TP_Final/css/fotos/foto1.jpg" alt="foto1"></a></div>
-<div><a href="/Feldman_TP_Final/css/fotos/foto2.jpg" data-lightbox="galeria"><img src="/Feldman_TP_Final/css/fotos/foto2.jpg" alt="foto2"></a></div>
-<div><a href="/Feldman_TP_Final/css/fotos/foto3.jpg" data-lightbox="galeria"><img src="/Feldman_TP_Final/css/fotos/foto3.jpg" alt="foto3"></a></div>
+<div><a href="/css/fotos/foto1.jpg" data-lightbox="galeria"><img src="/css/fotos/foto1.jpg" alt="foto1"></a></div>
+<div><a href="/css/fotos/foto2.jpg" data-lightbox="galeria"><img src="/css/fotos/foto2.jpg" alt="foto2"></a></div>
+<div><a href="/css/fotos/foto3.jpg" data-lightbox="galeria"><img src="/css/fotos/foto3.jpg" alt="foto3"></a></div>
 
-<div id="video"> <video src="/Feldman_TP_Final/css/fotos/video.mp4" controls></video>
+<div id="video"> <video src="/css/fotos/video.mp4" controls></video>
 </div>
 
 
